Cambiando el nombre del curso de ansible

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant:  gerenciando maquinas virtuales.  </li>
          <li> Docker creando containers sin dolor de cabeza</li>
-         <li> Ansible </li>
+         <li> Ansible: infraestructura como código </li>
          <li> Integración continua para mejorar la calidad del software </li>
      </ul>
 </body>
