--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant:  gerenciando maquinas virtuales.  </li>
          <li> Docker creando containers sin dolor de cabeza</li>
          <li> Ansible </li>
-         <li> Integración continua para mejorar la calidad del software </li>
+         <li> kubernetes:  introducción a la orquestacion de container </li>
      </ul>
 </body>
 </html>
