utilizando archivo en stash

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant:  gerenciando maquinas virtuales.  </li>
-         <li> Docker creando containers sin dolor de cabeza</li>
-         <li> Ansible </li>
-         <li> kubernetes:  introducción a la orquestacion de container </li>
+          <li> Vagrant:  gerenciando maquinas virtuales.  </li>
+          <li> Docker creando containers sin dolor de cabeza</li>
+          <li> Ansible: infraestructura como código </li>
+          <li> Integración continua: Madurez y prodycutividad en el desarrollo de software</li> 
+          <li> kubernetes:  introducción a la orquestacion de container </li>
      </ul>
 </body>
 </html>
